// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Svg component render correct pased a valid name 1`] = `
<View>
  <SvgMock />
</View>
`;

exports[`Svg component render correct pased size 1`] = `
<View>
  <SvgMock
    height={120}
    width={120}
  />
</View>
`;
